[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/anima/ui/windows/AnimaNodesWindow.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/shared/AnimaNodesList.tscn" type="PackedScene" id=2]

[node name="NodesWindow" type="WindowDialog"]
modulate = Color( 1, 1, 1, 0 )
margin_right = -0.280029
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 260, 320 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="AnimaNodesList" parent="." instance=ExtResource( 2 )]
trigger_selected = true

[connection signal="close" from="AnimaNodesList" to="." method="_on_AnimaNodesList_close"]
[connection signal="node_selected" from="AnimaNodesList" to="." method="_on_AnimaNodesList_node_selected"]
